[refactor]: fix dark mode issues in several pages/components. Fixes #522

--- a/frontend/smarthome/src/css/SensorActuatorStyling.css
+++ b/frontend/smarthome/src/css/SensorActuatorStyling.css
@@ -1,3 +1,11 @@
+:root {
+    --light-background: #e0e0e0; /* Light theme background color */
+    --dark-background: #303030; /* Dark theme background color */
+    --light-text: #000; /* Light theme text color */
+    --dark-text: #fff; /* Dark theme text color */
+    --dark-border: 1px solid #555555;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -11,10 +19,15 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
-    background-color: #e0e0e0;
+    background-color: var(--light-background);
     padding: 10px;
     border: 1px solid #ddd;
     width: 100%;
+}
+
+.header-row.dark-theme {
+    background-color: var(--dark-background);
+    border: var(--dark-border);
 }
 
 .title {
@@ -44,6 +57,11 @@
     background-color: #f0f0f0;
 }
 
+.header.dark-theme {
+    background-color: var(--dark-background);
+    border-bottom: var(--dark-border);
+}
+
 .row {
     border-bottom: 1px solid #ddd;
 }
@@ -66,6 +84,10 @@
 
 .row .column:first-child {
     border-left: none;
+}
+
+.row.dark-theme .column {
+    background-color: var(--dark-background);
 }
 
 .add-button {
